--- a/examples/index.html
+++ b/examples/index.html
@@ -7,15 +7,24 @@
 	<script src="platform.js"></script>
 	<script src="polymer.js"></script>
 	<link rel="import" href="../src/flag-icon.html">
-	<style></style>
+	<style>
+		.show {
+			position: fixed;
+			left: 725px;
+			top: 15px;
+		}
+		.show flag-icon {
+			display: block;
+		}
+	</style>
   </head>
   <body unresolved>
 	<h1>&lt;flag-icon&gt; Demos</h1>
 
-	<table style="float:left">
+	<table>
 		<tr><th>Country</th><th>Alpha2</th><th>Alpha3</th><th>Numeric</th><th>SVG</th></tr>
 		<template id="countryTable" repeat="{{countries}}">
-			<tr>
+			<tr onmouseover="changeShow('{{name}}','{{alpha2}}');">
 				<td>{{name}}</td>
 				<td><flag-icon iso="{{alpha2}}"></flag-icon> {{alpha2}}</td>
 				<td><flag-icon iso="{{alpha3}}"></flag-icon> {{alpha3}}</td>
@@ -25,18 +34,23 @@
 		</template>
 	</table>
 
-	<div style="float:left;margin-left:100px;">
-		<flag-icon iso="ca"></flag-icon><br/>16x11 (default)
-		<p>
-			<flag-icon iso="ca" width="100px"></flag-icon><br/>100px Scaled PNG
-		</p>
-		<p>
-			<flag-icon iso="ca" svg width="100px"></flag-icon><br/>100px Scaled SVG
-		</p>
-		<p>
-			<flag-icon iso="ca" svg width="250px"></flag-icon><br/>250px Scaled SVG
-		</p>
-	</div>
+	<template id="show" bind>
+		<div class="show">
+			<h2>{{name}}</h2>
+			<p/>
+			<flag-icon iso="{{alpha2}}"></flag-icon>
+			16x11 (default)
+			<p/>
+			<flag-icon iso="{{alpha2}}" width="100px"></flag-icon>
+			100px Scaled PNG
+			<p/>
+			<flag-icon iso="{{alpha2}}" svg width="100px"></flag-icon>
+			100px Scaled SVG
+			<p/>
+			<flag-icon iso="{{alpha2}}" svg width="350px"></flag-icon>
+			350px Scaled SVG
+		</div>
+	</template>
 
 	<script>
 	var countries = [
@@ -293,6 +307,15 @@
 	document.getElementById('countryTable').model = {
 		countries: countries
 	};
+	var showModel = {
+		name: 'Canada',
+		alpha2: 'ca'
+	};
+	document.getElementById('show').model = showModel;
+	function changeShow(name,iso){
+		showModel.name = name;
+		showModel.alpha2 = iso;
+	}
 	</script>
   </body>
 </html>
