refactor for Brower

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,9 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<script src="platform.js"></script>
-	<script src="polymer.js"></script>
-	<link rel="import" href="../src/flag-icon.html">
+	<script src="../../platform/platform.js"></script>
+	<link rel="import" href="../flag-icon.html">
 	<style>
 		.show {
 			position: fixed;
