--- a/flag-icon.html
+++ b/flag-icon.html
@@ -2,6 +2,8 @@
  https://github.com/stevenrskelton/flag-icon
 -->
 
+<script src="../polymer/polymer.js"></script>
+
 <polymer-element name="flag-icon" attributes="iso svg width height">
   <template>
 	<style>
@@ -291,5 +293,5 @@
 		svg: null,
 		width: '16px'
 	});
-  </script>    
+  </script>
 </polymer-element>
