--- a/flag-icon.html
+++ b/flag-icon.html
@@ -2,7 +2,7 @@
  https://github.com/stevenrskelton/flag-icon
 -->
 
-<script src="../polymer/polymer.js"></script>
+<link rel="import" href="../polymer/polymer.html">
 
 <polymer-element name="flag-icon" attributes="iso svg width height">
   <template>
