--- a/examples/us-states.html
+++ b/examples/us-states.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<script src="../../platform/platform.js"></script>
 	<link rel="import" href="../flag-icon.html">
+	<link rel="import" href="index-links.html">
 	<style>
 		.show {
 			position: fixed;
@@ -19,12 +20,6 @@
   </head>
   <body unresolved>
 	<h1>&lt;flag-icon&gt; Demos</h1>
-
-	<ul>
-		<li><a href="index.html">Parameters</a></li>
-		<li><a href="countries.html">World Country Flags</a></li>
-		<li><strong>USA State Flags</strong></li>
-	</ul>
 
 	<table width="700px">
 		<tr>
@@ -132,5 +127,6 @@
 		document.getElementById('show').model = showModel;
 	});
 	</script>
+	<index-links page="us-states.html"></index-links>
   </body>
 </html>
