--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<script src="../../platform/platform.js"></script>
 	<link rel="import" href="../flag-icon.html">
+	<link rel="import" href="index-links.html">
 	<style>
 		.show {
 			position: fixed;
@@ -27,14 +28,10 @@
 <body unresolved>
 	<h1>&lt;flag-icon&gt; Demos</h1>
 
-	<ul>
-		<li><strong>Parameters</strong></li>
-		<li><a href="countries.html">World Country Flags</a></li>
-		<li><a href="us-states.html">USA State Flags</a></li>
-	</ul>
+	<index-links page="index.html" examples></index-links>
 
 	<h2>Many input formats are allowed</h2>
-	
+
 	<div style="margin-left:50px;">
 		<flag-icon key="Republic of Korea"></flag-icon><pre>&lt;flag-icon key="Republic of Korea"&gt;&lt;/flag-icon&gt;</pre>
 		<br>
@@ -50,5 +47,53 @@
 		<br>
 		<flag-icon key="South Korea"></flag-icon><pre>&lt;flag-icon key="South Korea"&gt;&lt;/flag-icon&gt;</pre>
 	</div>
+
+	<h2>Try and Find a Flag</h2>
+
+	<template id="test" bind>
+		<table>
+			<tr>
+				<td rowspan="99" style="padding-right:20px">
+					<flag-icon key="{{key}}" width="72px" svg="{{svg}}" usstate="{{usstate}}" canada="{{canada}}"></flag-icon>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2"><input type="text" value="{{key}}" style="font-size:larger"></td>
+			</tr>
+			<tr>
+				<td>Class:</td>
+				<td>
+					<input type="radio" name="flagtype" value="country" onchange="classbind(this)" checked>Country
+					<input type="radio" name="flagtype" value="usstate" onchange="classbind(this)">US State
+					<input type="radio" name="flagtype" value="canada" onchange="classbind(this)">Canadian Province
+				</td>
+			</tr>
+			<tr>
+				<td>Render:</td>
+				<td>
+					<input type="radio" name="render" value="png" onchange="model.svg = false">PNG
+					<input type="radio" name="render" value="svg" onchange="model.svg = true" checked>SVG
+				</td>
+			</tr>
+		</table>
+	</template>
+	<script>
+	function classbind(t){
+		model.usstate = false;
+		model.canada = false;
+		switch(t.value){
+			case 'usstate': model.usstate = true; break;
+			case 'canada': model.canada = true; break;
+		}
+		model.key = '';
+	}
+	var model = {
+		key: 'Canada',
+		svg: true
+	};
+	window.addEventListener('polymer-ready', function(){
+		document.getElementById('test').model = model;
+	});
+	</script>
 </body>
 </html>
