--- a/examples/canada-provinces.html
+++ b/examples/canada-provinces.html
@@ -21,7 +21,7 @@
   <body unresolved>
 	<h1>&lt;flag-icon&gt; Demos</h1>
 
-	<table style="width:700px;min-height:525px;">
+	<table style="width:700px;min-height:525px;display:block;">
 		<tr>
 			<th style="width:450px">Province</th>
 			<th>Alpha2</th>
