fill in missing pngs

--- a/examples/index.html
+++ b/examples/index.html
@@ -33,6 +33,8 @@
 	<h2>Many input formats are allowed</h2>
 
 	<div style="margin-left:50px;">
+		<flag-icon key="Korea Republic"></flag-icon><pre>&lt;flag-icon key="Korea Republic"&gt;&lt;/flag-icon&gt;</pre>
+		<br>
 		<flag-icon key="Republic of Korea"></flag-icon><pre>&lt;flag-icon key="Republic of Korea"&gt;&lt;/flag-icon&gt;</pre>
 		<br>
 		<flag-icon key="Korea, Republic of"></flag-icon><pre>&lt;flag-icon key="Korea, Republic of"&gt;&lt;/flag-icon&gt;</pre>
