--- a/examples/us-states.html
+++ b/examples/us-states.html
@@ -25,7 +25,7 @@
 		<tr>
 			<th style="width:450px">State</th>
 			<th>Alpha2</th>
-			<th>ISO</th>
+			<th style="width:100px;">ISO</th>
 			<th>Numeric</th>
 			<th>SVG</th>
 		</tr>
