--- a/examples/countries.html
+++ b/examples/countries.html
@@ -25,7 +25,7 @@
 		<tr>
 			<th style="width:450px">Country</th>
 			<th>Alpha2</th>
-			<th>Alpha3</th>
+			<th style="width:75px;">Alpha3</th>
 			<th>Numeric</th>
 			<th>SVG</th>
 		</tr>
