update country alias

--- a/flag-icon.html
+++ b/flag-icon.html
@@ -102,7 +102,7 @@
 				{ name: ['Congo, the Democratic Republic of the','Congo, Democratic Republic of the','Democratic Republic of the Congo'], alpha2: 'CD', alpha3: 'COD', numeric: 180 },
 				{ name: 'Cook Islands', alpha2: 'CK', alpha3: 'COK', numeric: 184 },
 				{ name: 'Costa Rica', alpha2: 'CR', alpha3: 'CRI', numeric: 188 },
-				{ name: ['C\u00F4te d\'Ivoire','Cote d\'Ivoire','R\u00E9publique de C\u00F4te d\'Ivoire)','Ivory Coast'], alpha2: 'CI', alpha3: 'CIV', numeric: 384 },
+				{ name: ['C\u00F4te d\'Ivoire','Cote d\'Ivoire','R\u00E9publique de C\u00F4te d\'Ivoire','Ivory Coast'], alpha2: 'CI', alpha3: 'CIV', numeric: 384 },
 				{ name: 'Croatia', alpha2: 'HR', alpha3: 'HRV', numeric: 191 },
 				{ name: 'Cuba', alpha2: 'CU', alpha3: 'CUB', numeric: 192 },
 				{ name: ['Cura\u00E7ao','Curacao'], alpha2: 'CW', alpha3: 'CUW', numeric: 531 },
