--- a/examples/countries.html
+++ b/examples/countries.html
@@ -50,17 +50,18 @@
 
 	<template id="show" bind>
 		<div class="show">
-			<h2>{{name}}</h2>
-			<p/>
+			<h2 style="margin-bottom:0px">{{name}}</h2>
+			{{endonym}}<br>
+			<p>
 			<flag-icon key="{{key}}"></flag-icon>
 			16x11 (default)
-			<p/>
+			<p>
 			<flag-icon key="{{key}}" width="100px"></flag-icon>
 			100px Scaled PNG
-			<p/>
+			<p>
 			<flag-icon key="{{key}}" svg width="100px"></flag-icon>
 			100px Scaled SVG
-			<p/>
+			<p>
 			<flag-icon key="{{key}}" svg width="350px"></flag-icon>
 			350px Scaled SVG
 		</div>
@@ -68,6 +69,7 @@
 
 	<script>
 	var countries = [
+		{ name: 'Abkhazia', alpha2: 'AB' },
 		{ name: 'Afghanistan', alpha2: 'AF', alpha3: 'AFG', numeric: 4 },
 		{ name: 'Åland Islands', alpha2: 'AX', alpha3: 'ALA', numeric: 248 },
 		{ name: 'Albania', alpha2: 'AL', alpha3: 'ALB', numeric: 8 },
@@ -323,21 +325,26 @@
 		{ name: 'United Nations', key: 'unitednations' },
 		{ name: 'England', key: 'england' },
 		{ name: 'Scotland', key: 'scotland' },
-		{ name: 'Wales', key: 'wales' }
+		{ name: 'Wales', key: 'wales' },
+		{ name: 'South Ossetia', key: 'southossetia' },
+		{ name: 'Northern Cyprus', key: 'northerncyprus' },
+		{ name: 'Kosovo', key: 'XK' },
+		{ name: 'Catalonia', key: 'catalonia' }
 	]
 	var showModel = {
 		name: 'Canada',
+		endonym: '',
 		key: 'ca'
 	};
+	var flagicon;
 	function changeShow(key,isOther){
 		showModel.key = key;
-		if(isOther){
-			showModel.name = other.filter(function(row){ return row.key == key; })[0].name;
-		}else{
-			showModel.name = countries.filter(function(row){ return row.alpha2 == key; })[0].name;
-		}
+		var country = flagicon.findCountry(key);
+		showModel.name = country.title;
+		showModel.endonym = country.data.endonym ? country.data.endonym[0] : '';
 	}
 	window.addEventListener('polymer-ready', function(){
+		flagicon = new FlagIcon();
 		document.getElementById('otherTable').model = {
 			other: other
 		};
